# softsim-quecopen-unisoc-lte

./: .gitignore  .gitmodules  Dockerfile  README.md  arm-none-eabi.cmake  build.sh  docker-compose.yml  github_actions_build.sh
LTE01R03A07_C_SDK_U/: .gitignore  Kconfig  (+5 more)
LTE01R03A07_C_SDK_U/components/net/: CMakeLists.txt  Kconfig
LTE01R03A07_C_SDK_U/components/net/include/: mbedtls_sockets.h  net_config.h.in  netdev_interface.h  netutils.h  ppp_interface.h  sockets.h
LTE01R03A07_C_SDK_U/components/net/lwip/: CMakeLists.txt
LTE01R03A07_C_SDK_U/components/net/lwip/include/: lwipopts.h  lwipports.h
LTE01R03A07_C_SDK_U/components/net/lwip/src/api/: api_lib.c  api_msg.c  netdb.c  sockets.c  tcpip.c
LTE01R03A07_C_SDK_U/components/net/lwip/src/apps/lwiperf/: lwiperf.c
LTE01R03A07_C_SDK_U/components/net/lwip/src/apps/snmp/: snmp_mib2_system.c  snmp_traps.c
LTE01R03A07_C_SDK_U/components/net/lwip/src/apps/sntp/: sntp.c
LTE01R03A07_C_SDK_U/components/net/lwip/src/core/: dns.c  init.c  ip.c  netif.c  stats.c  tcp.c  tcp_in.c  tcp_out.c  udp.c
LTE01R03A07_C_SDK_U/components/net/lwip/src/core/ipv4/: dhcp.c  ip4_nat.c
LTE01R03A07_C_SDK_U/components/net/lwip/src/core/ipv6/: icmp6.c  ip6.c  ip6_frag.c  nd6.c
LTE01R03A07_C_SDK_U/components/net/lwip/src/include/lwip/: api.h  dns.h  ip4_nat.h  nd6.h  netif.h  opt.h  sockets.h  stats.h
LTE01R03A07_C_SDK_U/components/net/lwip/src/include/lwip/apps/: lwiperf.h
LTE01R03A07_C_SDK_U/components/net/lwip/src/include/lwip/priv/: api_msg.h
LTE01R03A07_C_SDK_U/components/net/lwip/src/include/lwip/prot/: ip6.h  tcp.h
LTE01R03A07_C_SDK_U/components/net/lwip/src/include/netif/ppp/: ppp.h  ppp_opts.h  pppol2tp.h
LTE01R03A07_C_SDK_U/components/net/lwip/src/netif/: ethernet.c
LTE01R03A07_C_SDK_U/components/net/lwip/src/netif/ppp/: chap-new.c  ipcp.c  lcp.c  ppp-fsm.c  ppp-utils.c  ppp.c  pppol2tp.c  pppos.c  upap.c
LTE01R03A07_C_SDK_U/components/net/mbedtls/: CMakeLists.txt
LTE01R03A07_C_SDK_U/components/net/mbedtls/include/mbedtls/: bignum.h  config.h  net_sockets.h
LTE01R03A07_C_SDK_U/components/net/src/: cfw_sockets_api.c  lwipports.c
LTE01R03A07_C_SDK_U/components/net/xlat/: CMakeLists.txt  core.cmake
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/: CMakeLists.txt  alipay_api_demo.c  alipay_gcc_sdk.cmake  ql_alipay_cert.c  ql_alipay_file.c  ql_alipay_net_kal.c  ql_alipay_vendor_device_info.c  ql_alipay_vendor_os.c
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/aid_code/: depends.txt
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/aid_code/inc/: aid_code.h
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/ant_forrest/: depends.txt
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/antchain/inc/: bot_device_api.h
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/antchain/src/: bot_adapter.c  bot_adapter.h  bot_test.c
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/bind_net/: depends.txt
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/bind_net/inc/: alipay_bind.h
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/pay_code/: depends.txt
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/pay_result/: depends.txt
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/pay_result/inc/: alipay_pay_result.h
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/provision/: depends.txt
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/provision/inc/: alipay_activation.h  alipay_cert.h
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/scan_pay/: depends.txt
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/scan_pay/inc/: alipay_scan_pay.h
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/setting/: depends.txt
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/setting/inc/: alipay_account_manage.h
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/trans_code/: depends.txt
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/app/trans_code/inc/: alipay_transit.h
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/hal/cert/inc/: vendor_cert.h
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/hal/cert/sample/: test_cert.c  vendor_cert.c
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/hal/device_info/inc/: csi_device_info.h  hal_device_info.h  vendor_device_info.h
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/hal/device_info/sample/: test_device_info.c  vendor_device_info.c
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/hal/file/inc/: vendor_file.h
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/hal/file/sample/: test_file.c
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/a5_gcc/hal/network/inc/: alipay_net_kal.h
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/alipay_encryption_chip/se_v1/: hs_private.c  hs_private.h  vendor_ssp.c
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/alipay_encryption_chip/se_v2/: hs_private.c  hs_private.h  vendor_ssp.c
LTE01R03A07_C_SDK_U/components/ql-application/alipay_gcc_sdk/inc/: alipay_api_demo.h
LTE01R03A07_C_SDK_U/components/ql-kernel/ql_at/: CMakeLists.txt  Kconfig
LTE01R03A07_C_SDK_U/components/ql-kernel/ql_at/inc/: ql_atcmd_handler.h  quec_atcmd_def.h  quec_atcmd_def_unisoc.h
LTE01R03A07_C_SDK_U/components/ql-kernel/ql_at/src/: ql_at_cmd_table_std.gperf  ql_atcmd_handler.c  quec_atc_search.c
LTE01R03A07_C_SDK_U/ohos/device/quectel/ecx00u/sdk_liteos/: BUILD.gn  config.gni
onomondo/: CMakeLists.txt  log.c  mem.c  ss_bootstrap.c  ss_fs.c  ss_provisioning.c
onomondo/inc/: log.h  ss_bootstrap.h  ss_fs_utils.h  ss_provisioning.h
onomondo/src/: softsim_adapt_demo.c  softsim_vsim_img_demo.c
(+683 files in other folders)
